--- a/apps/weather-forecast/src/styles.scss
+++ b/apps/weather-forecast/src/styles.scss
@@ -1,1 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
+@use './app/theme/index' as *;
+// global clearfix
+*,
+::before,
+::after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+html,
+body {
+	height: 100%;
+	font-size: 16px;
+}
+
+body {
+	background-color: #f5f6ff;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Montserrat', sans-serif;
+}
+
+p,
+a,
+span,
+label,
+input {
+	font-family: 'Roboto', sans-serif;
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
