--- a/apps/weather-forecast/src/app/app.component.scss
+++ b/apps/weather-forecast/src/app/app.component.scss
@@ -20,8 +20,7 @@
 
 	.main {
 		display: flex;
-		align-items: flex-start;
-		justify-content: flex-start;
+		flex-direction: column;
 		flex: 1;
 	}
 }
